Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/AnnotatedClassExpr.out
AnnotatedClassExpr.java:12:29: compiler.err.no.annotations.on.dot.class
AnnotatedClassExpr.java:13:27: compiler.err.no.annotations.on.dot.class
AnnotatedClassExpr.java:14:27: compiler.err.no.annotations.on.dot.class
AnnotatedClassExpr.java:15:30: compiler.err.no.annotations.on.dot.class
AnnotatedClassExpr.java:16:41: compiler.err.no.annotations.on.dot.class
AnnotatedClassExpr.java:17:44: compiler.err.no.annotations.on.dot.class
AnnotatedClassExpr.java:18:37: compiler.err.no.annotations.on.dot.class
7 errors
